DOCKER: Update docker compose API-GATEWAY: Update nginx configuration USER-SERVICE: Update configuration + add rabbitmq setup
